--- a/SpringChickens/Views/Home/Signup.cshtml
+++ b/SpringChickens/Views/Home/Signup.cshtml
@@ -18,18 +18,18 @@
                     <form asp-controller="Home" asp-action="RegisterNewUser">
                         <div class="form-group">
                             <label asp-for="UserName">Username</label>
-                            <input asp-for="UserName" type="text" class="form-control" placeholder="Enter email">
+                            <input asp-for="UserName" type="text" class="form-control" placeholder="Enter Username">
                         </div>
                         <div class="form-group">
-                            <label for="exampleInputPassword1">Password</label>
-                            <input type="password" class="form-control" placeholder="Enter Password">
+                            <label asp-for="Password">Password</label>
+                            <input type="password" class="form-control" asp-for="Password" placeholder="Enter Password">
                         </div>
                         <div class="form-group">
-                            <label for="exampleInputPassword1">Confirm Password</label>
-                            <input type="password" class="form-control" placeholder="Confirm Password">
+                            <label asp-for="ConfirmPassword">Confirm Password</label>
+                            <input asp-for="ConfirmPassword" type="password" class="form-control" placeholder="Confirm Password">
                         </div>
-                        <button type="submit" class="btn btn-primary">Submit</button>
-                        <small class="form-text text-danger">@Model.ErrorMessage</small>
+                        <button type="submit" class="btn btn-primary float-right">Submit</button>
+                        <small class="form-text text-danger text-left">@Model.ErrorMessage</small>
                     </form>
 
                 </div>
