--- a/SpringChickens/Views/Home/Signup.cshtml
+++ b/SpringChickens/Views/Home/Signup.cshtml
@@ -21,6 +21,10 @@
                             <input asp-for="UserName" type="text" class="form-control" placeholder="Enter Username">
                         </div>
                         <div class="form-group">
+                            <label asp-for="Email">Email</label>
+                            <input asp-for="Email" type="email" class="form-control" placeholder="Enter Email">
+                        </div>
+                        <div class="form-group">
                             <label asp-for="Password">Password</label>
                             <input type="password" class="form-control" asp-for="Password" placeholder="Enter Password">
                         </div>
