--- a/SpringChickens/Views/Shared/_Layout.cshtml
+++ b/SpringChickens/Views/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Contact">Contact Us</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AllFeeds">All Feeds</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Trip" asp-action="Index">All Feeds</a>
                         </li>
                     </ul>
 
