--- a/SpringChickens/Views/Trip/ViewTrip.cshtml
+++ b/SpringChickens/Views/Trip/ViewTrip.cshtml
@@ -31,9 +31,13 @@ foreach (var post in Model.Posts)
         </div>
 
         <div class="card-footer">
-            <a class="btn btn-outline-danger close" aria-label="delete" asp-controller="Home" asp-action="DeletePost" asp-route-id="@post.Id" type="button">
-                <span aria-hidden="true">&times;</span>
-            </a>
+            <form asp-controller="Trip" asp-action="DeletePost">
+                <input value="@post.Id" style="display: none" asp-for="Delete_Id" />
+
+                <button type="submit" class="btn btn-outline-danger">
+                    <span>&times;</span>
+                </button>
+            </form>
         </div>
     </div>
 
