--- a/SpringChickens/Views/Shared/_Layout.cshtml
+++ b/SpringChickens/Views/Shared/_Layout.cshtml
@@ -39,6 +39,15 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Trip" asp-action="Index">All Feeds</a>
                         </li>
+
+                        @{
+                            if (Model.Layout_IsAdmin)
+                            {
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="FileUpload" asp-action="Index">Upload File</a>
+                                </li>
+                            }
+                        }
                     </ul>
 
                     @{
