--- a/SpringChickens/Views/Shared/_Layout.cshtml
+++ b/SpringChickens/Views/Shared/_Layout.cshtml
@@ -46,6 +46,9 @@
                                 <li class="nav-item">
                                     <a class="nav-link text-dark" asp-area="" asp-controller="FileUpload" asp-action="Index">Upload File</a>
                                 </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="FileUpload" asp-action="AddNewTrip">New Trip</a>
+                                </li>
                             }
                         }
                     </ul>
