--- a/SpringChickens/Views/Home/Signup.cshtml
+++ b/SpringChickens/Views/Home/Signup.cshtml
@@ -18,19 +18,19 @@
                     <form asp-controller="Home" asp-action="RegisterNewUser">
                         <div class="form-group">
                             <label asp-for="UserName">Username</label>
-                            <input asp-for="UserName" type="text" class="form-control" placeholder="Enter Username">
+                            <input asp-for="UserName" type="text" class="form-control" placeholder="Enter Username" required>
                         </div>
                         <div class="form-group">
                             <label asp-for="Email">Email</label>
-                            <input asp-for="Email" type="email" class="form-control" placeholder="Enter Email">
+                            <input asp-for="Email" type="email" class="form-control" placeholder="Enter Email" required>
                         </div>
                         <div class="form-group">
                             <label asp-for="Password">Password</label>
-                            <input type="password" class="form-control" asp-for="Password" placeholder="Enter Password">
+                            <input type="password" class="form-control" asp-for="Password" placeholder="Enter Password" required>
                         </div>
                         <div class="form-group">
                             <label asp-for="ConfirmPassword">Confirm Password</label>
-                            <input asp-for="ConfirmPassword" type="password" class="form-control" placeholder="Confirm Password">
+                            <input asp-for="ConfirmPassword" type="password" class="form-control" placeholder="Confirm Password" required>
                         </div>
                         <button type="submit" class="btn btn-primary float-right">Submit</button>
                         <small class="form-text text-danger text-left">@Model.ErrorMessage</small>
