--- a/SpringChickens/Views/Home/Signup.cshtml
+++ b/SpringChickens/Views/Home/Signup.cshtml
@@ -6,10 +6,10 @@
 
 
     <div class="row">
-        <div class="col-3">
+        <div class="col-md-1">
 
         </div>
-        <div class="col-6">
+        <div class="col-md-6">
             <div class="card">
                 <div class="card-body">
 
@@ -38,9 +38,31 @@
 
                 </div>
             </div>
+            <br />
         </div>
-        <div class="col-3">
+        <div class="col-md-4">
+            <div class="card">
+                <h3 class="card-header">Password Policy</h3>
+                <ul class="list-group list-group-flush card-body">
+                    <li class="list-group-item">Must have at least one capital letter.</li>
+                    <li class="list-group-item">Must have at least one lower case letter.</li>
+                    <li class="list-group-item">Must have at least one number.</li>
+                </ul>
+            </div>
+
+            <br />
+
+            <div class="card">
+                <h3 class="card-header">Username Policy</h3>
+                <ul class="list-group list-group-flush card-body">
+                    <li class="list-group-item">Must be at least 6 letters long.</li>
+                </ul>
+            </div>
 
         </div>
-        
+
+        <div class="col-md-1">
+
+        </div>
+
     </div>
