Progressed on carousel, got a weird table thing for the management item partial

--- a/SpringChickens/Views/Shared/_Layout.cshtml
+++ b/SpringChickens/Views/Shared/_Layout.cshtml
@@ -46,10 +46,7 @@
                             if (Model.Layout_IsAdmin)
                             {
                                 <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="FileUpload" asp-action="Index">Upload File</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="FileUpload" asp-action="AddNewTrip">New Trip</a>
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="Index">Site Manager</a>
                                 </li>
                             }
                         }
