--- a/SpringChickens/Views/Home/Index.cshtml
+++ b/SpringChickens/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model SpringChickens.ViewModels.HomeViewModel
+@{
     ViewData["Title"] = "Home Page";
 }
 
@@ -13,174 +14,9 @@
     </div>
 
     <div class="col-md-6">
-        <div class="bd-example">
-            <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
-                <ol class="carousel-indicators">
-                    <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-                    <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-                    <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-                    <li data-target="#carouselExampleCaptions" data-slide-to="3"></li>
-                </ol>
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="~/images/home.jpeg" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5>First slide label</h5>
-                            <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <img src="~/images/home.jpeg" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5>Second slide label</h5>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <img src="~/images/home.jpeg" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5>Third slide label</h5>
-                            <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <!-- Calendar maybe -->
-                        <div class="jzdcal d-block w-100 pt-3 pb-3">
-                            <div class="jzdbox1 jzdbasf w-80">
-
-                                <div class="jzdcalt">June 2017</div>
-
-                                <span>Su</span>
-                                <span>Mo</span>
-                                <span>Tu</span>
-                                <span>We</span>
-                                <span>Th</span>
-                                <span>Fr</span>
-                                <span>Sa</span>
-
-
-                                <span class="jzdb"><!--BLANK--></span>
-                                <span class="jzdb"><!--BLANK--></span>
-                                <span class="jzdb"><!--BLANK--></span>
-                                <span class="jzdb"><!--BLANK--></span>
-                                <span class="jzdb"><!--BLANK--></span>
-                                <span class="jzdb"><!--BLANK--></span>
-                                <span>1</span>
-                                <span class="circle" data-title="My 25th birthday!">2</span>
-                                <span>3</span>
-                                <span>4</span>
-                                <span>5</span>
-                                <span>6</span>
-                                <span>7</span>
-                                <span>8</span>
-                                <span>9</span>
-                                <span>10</span>
-                                <span>11</span>
-                                <span class="circle" data-title="2 month anniversary!">12</span>
-                                <span>13</span>
-                                <span>14</span>
-                                <span>15</span>
-                                <span>16</span>
-                                <span>17</span>
-                                <span>18</span>
-                                <span>19</span>
-                                <span>20</span>
-                                <span>21</span>
-                                <span class="circle" data-title="#MusicMonday - share your favorite song!">22</span>
-                                <span>23</span>
-                                <span>24</span>
-                                <span>25</span>
-                                <span>26</span>
-                                <span>27</span>
-                                <span>28</span>
-                                <span>29</span>
-                                <span>30</span>
-                                <span class="jzdb"><!--BLANK--></span>
-                                <span class="jzdb"><!--BLANK--></span>
-                                <span class="jzdb"><!--BLANK--></span>
-                                <span class="jzdb"><!--BLANK--></span>
-                                <span class="jzdb"><!--BLANK--></span>
-                                <span class="jzdb"><!--BLANK--></span>
-                            </div>
-                        </div>
-                        
-
-                    </div>
-                </div>
-                </div>
-                <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>
-            </div>
-        </div>
+        <partial name="_HomeCarouselPartial" model="Model.CarouselItems" />
     </div>
 
-    <div class="row">
-        <div class="col-3">
-
-            <div class="jzdbox1 jzdbasf jzdcal">
-
-                <div class="jzdcalt">June 2017</div>
-
-                <span>Su</span>
-                <span>Mo</span>
-                <span>Tu</span>
-                <span>We</span>
-                <span>Th</span>
-                <span>Fr</span>
-                <span>Sa</span>
-
-
-                <span class="jzdb"><!--BLANK--></span>
-                <span class="jzdb"><!--BLANK--></span>
-                <span class="jzdb"><!--BLANK--></span>
-                <span class="jzdb"><!--BLANK--></span>
-                <span class="jzdb"><!--BLANK--></span>
-                <span class="jzdb"><!--BLANK--></span>
-                <span>1</span>
-                <span class="circle" data-title="My 25th birthday!">2</span>
-                <span>3</span>
-                <span>4</span>
-                <span>5</span>
-                <span>6</span>
-                <span>7</span>
-                <span>8</span>
-                <span>9</span>
-                <span>10</span>
-                <span>11</span>
-                <span class="circle" data-title="2 month anniversary!">12</span>
-                <span>13</span>
-                <span>14</span>
-                <span>15</span>
-                <span>16</span>
-                <span>17</span>
-                <span>18</span>
-                <span>19</span>
-                <span>20</span>
-                <span>21</span>
-                <span class="circle" data-title="#MusicMonday - share your favorite song!">22</span>
-                <span>23</span>
-                <span>24</span>
-                <span>25</span>
-                <span>26</span>
-                <span>27</span>
-                <span>28</span>
-                <span>29</span>
-                <span>30</span>
-                <span class="jzdb"><!--BLANK--></span>
-                <span class="jzdb"><!--BLANK--></span>
-                <span class="jzdb"><!--BLANK--></span>
-                <span class="jzdb"><!--BLANK--></span>
-                <span class="jzdb"><!--BLANK--></span>
-                <span class="jzdb"><!--BLANK--></span>
-            </div>
-
-        </div>
-    </div>
+    
 </div>
 
