--- a/SpringChickens/Views/FileUpload/AddNewTrip.cshtml
+++ b/SpringChickens/Views/FileUpload/AddNewTrip.cshtml
@@ -14,7 +14,7 @@
         </div>
 
         <div class="form-group">
-            <label>Trip Name</label>
+            <label>Trip Description</label>
             <textarea type="text" class="form-control" placeholder="Description.." asp-for="Description"></textarea>
         </div>
 
