Made progress on calendar stuff, end of tuesday

--- a/SpringChickens/Views/Admin/Index.cshtml
+++ b/SpringChickens/Views/Admin/Index.cshtml
@@ -41,7 +41,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Create a new calendar event</h5>
                     <p class="card-text">Create a new event which will be shown on the "events" page <p class="text-danger">(WIP)</p></p>
-                    <a asp-controller="Home" asp-action="Index" class="card-link">Create Event</a>
+                    <a asp-controller="Admin" asp-action="CalendarManagement" class="card-link">Create Event</a>
                 </div>
             </div>
 
@@ -51,8 +51,7 @@
                     <h5 class="card-title">Manage carousel content</h5>
                     <p class="card-text">
                         This allows you to manage photos and captions that show up on the home page carousel.
-                        These are very important as they're the first impression your audience will have.
-                    <p class="text-danger">(WIP)</p></p>
+                        These are very important as they're the first impression your audience will have.</p>
                     <a asp-controller="Admin" asp-action="CarouselManagement" class="card-link">Manage Carousel</a>
                 </div>
             </div>
