--- a/SpringChickens/Views/Shared/_Layout.cshtml
+++ b/SpringChickens/Views/Shared/_Layout.cshtml
@@ -36,7 +36,7 @@
                         }
 
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Contact">Contact Us</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Calendar">Upcoming Events</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Trip" asp-action="Index">All Feeds</a>
