--- a/SpringChickens/Views/Admin/Index.cshtml
+++ b/SpringChickens/Views/Admin/Index.cshtml
@@ -36,12 +36,12 @@
                 </div>
             </div>
 
-            <!-- Create a new event -->
+            <!-- Manage the calendar -->
             <div class="card">
                 <div class="card-body">
-                    <h5 class="card-title">Create a new calendar event</h5>
-                    <p class="card-text">Create a new event which will be shown on the "events" page <p class="text-danger">(WIP)</p></p>
-                    <a asp-controller="Admin" asp-action="CalendarManagement" class="card-link">Create Event</a>
+                    <h5 class="card-title">Manage the Calendar</h5>
+                    <p class="card-text">Create and manage events that will show up along with the calendar on the events page.</p>
+                    <a asp-controller="Admin" asp-action="Calendar" class="card-link">Manage Calendar</a>
                 </div>
             </div>
 
