--- a/SpringChickens/Views/Shared/_CalendarPartial.cshtml
+++ b/SpringChickens/Views/Shared/_CalendarPartial.cshtml
@@ -27,9 +27,9 @@
                         }
                         
                     }
-                    <a class="btn btn-secondary text-center" asp-route-year="@backYear" asp-route-month="@backMonth"><= Back</a>
-                    <a class="btn btn-secondary text-center" asp-route-year="-1" asp-route-month="-1">Today</a>
-                    <a class="btn btn-secondary text-center" asp-route-year="@nextYear" asp-route-month="@nextMonth">Next =></a>
+                    <a class="btn btn-secondary text-center" asp-controller="@ViewData["routeController"]" asp-action="ChangeMonth" asp-route-changeAmount="-1"><= Back</a>
+                    <a class="btn btn-secondary text-center" asp-controller="@ViewData["routeController"]" asp-action="ResetToToday">Today</a>
+                    <a class="btn btn-secondary text-center" asp-controller="@ViewData["routeController"]" asp-action="ChangeMonth" asp-route-changeAmount="1">Next =></a>
                 </div>
             </div>
         </div>
