Made home text dynamic

--- a/SpringChickens/Views/Home/Index.cshtml
+++ b/SpringChickens/Views/Home/Index.cshtml
@@ -8,8 +8,8 @@
 
     <div class="col-md-6">
         <div class="text-center">
-            <h1 class="display-6">Welcome to the Spring Chickens</h1>
-            <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+            <h1 class="display-6">@Model.HomeTextTitle</h1>
+            <p>@Model.HomeTextBody</p>
         </div>
     </div>
 
