--- a/SpringChickens/Views/Shared/_Layout.cshtml
+++ b/SpringChickens/Views/Shared/_Layout.cshtml
@@ -72,8 +72,8 @@
                         }
                         else
                         {
-                            <p>Hello, @Model.Layout_Username!</p>
-                            <a class="btn btn-primary" asp-controller="Home" asp-action="SignOut">Sign-out</a>
+
+                            <p>Hello, @Model.Layout_Username! <a asp-controller="Home" asp-action="SignOut">Sign-out?</a></p>
                         }
                     }
 
