--- a/SpringChickens/Views/Admin/Index.cshtml
+++ b/SpringChickens/Views/Admin/Index.cshtml
@@ -51,8 +51,18 @@
                     <h5 class="card-title">Manage carousel content</h5>
                     <p class="card-text">
                         This allows you to manage photos and captions that show up on the home page carousel.
-                        These are very important as they're the first impression your audience will have.</p>
+                        These are very important as they're the first impression your audience will have.
+                    </p>
                     <a asp-controller="Admin" asp-action="CarouselManagement" class="card-link">Manage Carousel</a>
+                </div>
+            </div>
+
+            <!-- Manage the frontpage text -->
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Edit homepage text</h5>
+                    <p class="card-text">Change the text displayed on the home page.</p>
+                    <a asp-controller="Admin" asp-action="HomeText" class="card-link">Edit Home Text</a>
                 </div>
             </div>
 
