Added a way to promote users. And changed the favicon to a bike :)

--- a/SpringChickens/Views/Admin/Index.cshtml
+++ b/SpringChickens/Views/Admin/Index.cshtml
@@ -66,6 +66,15 @@
                 </div>
             </div>
 
+            <!-- Promote users -->
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">User promotions</h5>
+                    <p class="card-text">Here you can either promote a user to admin rank or demote a user to standard rank.</p>
+                    <a asp-controller="Admin" asp-action="PromoteUser" class="card-link">Promote User</a>
+                </div>
+            </div>
+
         </div>
     </div>
 
