Changed copyright year

--- a/SpringChickens/Views/Shared/_Layout.cshtml
+++ b/SpringChickens/Views/Shared/_Layout.cshtml
@@ -53,7 +53,7 @@
                             }
                         }
 
-                        @{ 
+                        @{
                             if (!Model.Layout_SignedIn)
                             {
                                 <li class="nav-item">
@@ -95,7 +95,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2019 - SpringChickens - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2020 - SpringChickens
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
