--- a/SpringChickens/Views/Home/Index.cshtml
+++ b/SpringChickens/Views/Home/Index.cshtml
@@ -20,3 +20,63 @@
     
 </div>
 
+<div class="row mt-3">
+
+    <div class="col-md-6">
+
+        <div class="card h-100">
+            <div class="card-header">
+                <h2>Where can you find us?</h2>
+                <p>Along with a lot of other bikers, we often go out to Willingham woods, so you might be able to see us there.</p>
+            </div>
+
+            <div class="card-body">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4759.653487330415!2d-0.30135388395318885!3d53.38214940275075!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48786203a5cceb8b%3A0x11582401164873a2!2sWillingham%20Woods!5e0!3m2!1sen!2suk!4v1588785205689!5m2!1sen!2suk" width="100%" height="100%" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+
+            </div>
+        </div>
+
+
+    </div>
+    <div class="col-md-6">
+
+        <div class="card">
+
+            <h2 class="card-header text-center">
+                Contact us!
+            </h2>
+
+            <div class="card-body">
+
+                <form asp-controller="Home" asp-action="Contact">
+
+                    <div class="form-group">
+                        <label>Your name</label>
+                        <input type="text" class="form-control" asp-for="ContactName" required />
+                    </div>
+
+                    <div class="form-group">
+                        <label>Your email</label>
+                        <input type="email" class="form-control" asp-for="ContactEmail" required />
+                    </div>
+
+                    <div class="form-group">
+                        <label>Your name</label>
+                        <textarea rows="5" class="form-control" asp-for="ContactMessage" required></textarea>
+                    </div>
+
+                    <button type="submit" class="btn btn-success">Send Message</button>
+
+                </form>
+
+            </div>
+
+            <div class="card-footer">
+                <p>Or find us on facebook <a href="https://www.facebook.com/spring.chickens.31" target="_blank">here!</a></p>
+            </div>
+
+        </div>
+
+    </div>
+
+</div>
