--- a/SpringChickens/Views/Shared/_Layout.cshtml
+++ b/SpringChickens/Views/Shared/_Layout.cshtml
@@ -57,7 +57,7 @@
                             if (!Model.Layout_SignedIn)
                             {
                                 <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="Reset" asp-action="Index">Forgot password</a>
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Reset" asp-action="Index">Forgot details</a>
                                 </li>
                             }
                         }
